--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Business - Marketing
+  uni: Algonquin College
+  year: Some time in history
   # awards:
-  # summary:
+  summary: Learned to make people buy stuff
